--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    background-image: url('images/155064.jpg');
 }
 
 
